--- a/src/ui/public/timepicker/timepicker.html
+++ b/src/ui/public/timepicker/timepicker.html
@@ -9,13 +9,13 @@
         <div class="col-md-2">
           <ul class="nav nav-pills nav-stacked kbn-timepicker-modes">
             <li ng-class="{active: mode === 'quick' }">
-              <a ng-click="setMode('quick')">quick</a>
+              <a ng-click="setMode('quick')">快速设置时间</a>
             </li>
             <li ng-class="{active: mode === 'relative' }">
-              <a ng-click="setMode('relative')">relative</a>
+              <a ng-click="setMode('relative')">相对时间</a>
             </li>
             <li ng-class="{active: mode === 'absolute' }">
-              <a ng-click="setMode('absolute')">absolute</a>
+              <a ng-click="setMode('absolute')">用户自定义</a>
             </li>
           </ul>
         </div>
@@ -39,7 +39,7 @@
               <form role="form" ng-submit="applyRelative()" class="form-inline" name="relativeTime">
                 <div class="kbn-timepicker-section">
                   <label>
-                    From:
+                    开始时间：
                     <span ng-show="relative.preview">{{relative.preview}}</span>
                     <span ng-hide="relative.preview"><i>Invalid Expression</i></span>
                   </label>
@@ -77,7 +77,7 @@
 
                 <div class="kbn-timepicker-section">
                   <label>
-                    To: Now
+                    截至当前
                   </label>
                   <br>
                   <div class="form-group">
@@ -90,7 +90,7 @@
                   <br>
                   <div class="form-group">
                     <button type="submit" class="btn btn-primary kbn-timepicker-go" ng-disabled="!relative.preview">
-                      Go
+                      搜索
                     </button>
                   </div>
                 </div>
@@ -101,7 +101,7 @@
               <form name="absoluteTime" ng-submit="applyAbsolute()">
                 <div class="kbn-timepicker-section">
                   <div>
-                    <label class="small">From: <span ng-show="!absolute.from"><i>Invalid Date</i></span>
+                    <label class="small">开始时间： <span ng-show="!absolute.from"><i>Invalid Date</i></span>
                     </label>
                     <input type="text" required class="form-control" input-datetime="{{format}}" ng-model="absolute.from">
                   </div>
@@ -112,8 +112,8 @@
 
                 <div class="kbn-timepicker-section">
                   <div>
-                    <label class="small">To:
-                      <a class="label label-default" ng-click="setToNow()">Set To Now</a>
+                    <label class="small">结束时间：
+                      <a class="label label-default" ng-click="setToNow()">设为当前时间</a>
                     </label>
                     <span ng-show="!absolute.to"><i>Invalid Date</i></span>
                     <input type="text" required class="form-control" input-datetime="{{format}}" ng-model="absolute.to">
@@ -127,9 +127,9 @@
                   <label>&nbsp;</label>
                   <div class="form-group">
                     <button class="btn btn-primary kbn-timepicker-go" ng-disabled="absolute.from > absolute.to || !absolute.from || !absolute.to" type="submit">
-                      Go
+                      搜索
                     </button>
-                    <span class="small" ng-show="absolute.from > absolute.to"><strong>From</strong> must occur before <strong>To</strong></span>
+                    <span class="small" ng-show="absolute.from > absolute.to"><strong>开始时间</strong> must occur before <strong>结束时间</strong></span>
                   </div>
                 </div>
               </form>
@@ -141,7 +141,7 @@
 
     <!-- Refresh Intervals -->
     <div ng-show="activeTab === 'interval'" role="tabpanel" class="tab-pane active">
-      <div class="kuiLocalDropdownTitle">Refresh Interval</div>
+      <div class="kuiLocalDropdownTitle">自动刷新间隔</div>
       <div ng-repeat="list in refreshLists" class="kbn-refresh-section">
         <ul class="list-unstyled">
           <li ng-repeat="inter in list">
