--- a/src/core_plugins/kbn_vislib_vis_types/public/editors/histogram.html
+++ b/src/core_plugins/kbn_vislib_vis_types/public/editors/histogram.html
@@ -5,7 +5,7 @@
   </label>
   <select class="form-control" ng-model="vis.params.mode" ng-options="mode for mode in vis.type.params.modes"></select>
   <label>
-    Y-Axis Scale
+    Y轴比例	<!--Y-Axis Scale  -->
   </label>
   <select class="form-control" ng-model="vis.params.scale" ng-options="mode for mode in vis.type.params.scales"></select>
 </div>
