--- a/src/core_plugins/kibana/public/discover/index.html
+++ b/src/core_plugins/kibana/public/discover/index.html
@@ -136,7 +136,7 @@
                 <center>
                   These are the first {{opts.sampleSize}} documents matching
                   your search, refine your search to see others.
-                  <a ng-click="toTop()" title="Back to top">Back to top.</a>
+                  <a ng-click="toTop()" title="Back to top">返回顶部</a> <!-- Back to top. -->
                 </center>
               </div>
             </div>
