--- a/src/core_plugins/kibana/public/visualize/editor/sidebar.html
+++ b/src/core_plugins/kibana/public/visualize/editor/sidebar.html
@@ -21,7 +21,7 @@
               ng-class="{'is-vis-editor-sub-nav-link-selected': sidebar.section == 'data'}"
               ng-click="sidebar.section='data'"
             >
-              Data
+              	数据源<!-- Data -->
             </a>
           </li>
           <li ng-class="{active: sidebar.section == 'options'}">
@@ -30,7 +30,7 @@
               ng-class="{'is-vis-editor-sub-nav-link-selected': sidebar.section == 'options'}"
               ng-click="sidebar.section='options'"
             >
-              Options
+              	设置<!--Options-->
             </a>
           </li>
         </ul>
