--- a/src/core_plugins/kibana/public/visualize/wizard/step_1.html
+++ b/src/core_plugins/kibana/public/visualize/wizard/step_1.html
@@ -3,7 +3,7 @@
 </div>
 <div class="wizard">
   <div class="wizard-column">
-    <h3 class="wizard-sub-title">Create New Visualization</h3>
+    <h3 class="wizard-sub-title">新建统计图表</h3> <!-- Create New Visualization -->
     <div class="wizard-row">
       <a
         class="wizard-type"
@@ -23,7 +23,7 @@
     </div>
   </div>
   <div class="wizard-column">
-    <h3 class="wizard-sub-title">Or, Open a Saved Visualization</h3>
+    <h3 class="wizard-sub-title">或者，打开已存的统计图表</h3> <!-- Or, Open a Saved Visualization -->
     <saved-object-finder
       title="Saved Visualizations"
       type="visualizations"
