--- a/src/core_plugins/kibana/public/visualize/wizard/step_2.html
+++ b/src/core_plugins/kibana/public/visualize/wizard/step_2.html
@@ -3,7 +3,7 @@
 </div>
 <div class="wizard">
   <div class="wizard-column wizard-column--small">
-    <h3 class="wizard-sub-title">From a New Search, Select Index</h3>
+    <h3 class="wizard-sub-title">选择Index，新建搜索</h3> <!-- From a New Search, Select Index -->
     <paginated-selectable-list
       per-page="20"
       list="indexPattern.list"
@@ -12,7 +12,7 @@
     ></paginated-selectable-list>
   </div>
   <div class="wizard-column wizard-column--large">
-    <h3 class="wizard-sub-title">Or, From a Saved Search</h3>
+    <h3 class="wizard-sub-title">或者，从已存的搜索中选择</h3> <!-- Or, From a Saved Search -->
     <!-- Saved searches -->
     <saved-object-finder
         title="Saved Searches"
