继续汉化； 屏蔽几个不需要的统计图；

--- a/src/core_plugins/kibana/public/visualize/editor/panels/load.html
+++ b/src/core_plugins/kibana/public/visualize/editor/panels/load.html
@@ -1,2 +1,2 @@
-<div class="kuiLocalDropdownTitle">Open Visualization</div>
+<div class="kuiLocalDropdownTitle">打开统计图表</div>  <!-- Open Visualization -->
 <saved-object-finder type="visualizations"></saved-object-finder>
