--- a/src/core_plugins/kibana/public/visualize/editor/panels/save.html
+++ b/src/core_plugins/kibana/public/visualize/editor/panels/save.html
@@ -2,7 +2,7 @@
   role="form"
   ng-submit="opts.doSave()"
 >
-  <div class="kuiLocalDropdownTitle">Save Visualization</div>
+  <div class="kuiLocalDropdownTitle">保存统计图表</div>
   <input
     class="kuiLocalDropdownInput"
     input-focus="select"
@@ -19,6 +19,6 @@
     type="submit"
     class="btn btn-primary"
   >
-    Save
+    保存
   </button>
 </form>
