继续汉化，改了timepicker

--- a/src/ui/public/timepicker/timepicker.html
+++ b/src/ui/public/timepicker/timepicker.html
@@ -4,7 +4,7 @@
 
     <!-- Filters -->
     <div ng-show="activeTab === 'filter'" role="tabpanel" class="tab-pane active">
-      <div class="kuiLocalDropdownTitle">Time Range</div>
+      <div class="kuiLocalDropdownTitle">请设置时间范围</div> <!--Time Range-->
       <div class="row">
         <div class="col-md-2">
           <ul class="nav nav-pills nav-stacked kbn-timepicker-modes">
