--- a/src/ui/public/timepicker/kbn_global_timepicker.html
+++ b/src/ui/public/timepicker/kbn_global_timepicker.html
@@ -14,7 +14,7 @@
     ng-click="kbnTopNav.toggle('interval')"
   >
     <span ng-show="timefilter.refreshInterval.value === 0">
-      <span class="fa fa-repeat"></span> Auto-refresh
+      <span class="fa fa-repeat"></span> 自动刷新 <!--Auto-refresh-->
     </span>
     <span ng-show="timefilter.refreshInterval.value > 0">
       {{timefilter.refreshInterval.display}}
