--- a/src/core_plugins/spy_modes/public/req_resp_stats_spy_mode.html
+++ b/src/core_plugins/spy_modes/public/req_resp_stats_spy_mode.html
@@ -1,25 +1,25 @@
 <div ng-if="!req.stopped" class="visualize-spy-loading">
   <div class="visualize-spy-loading-text">
-    Request in progress
+    	请求处理中...				<!-- Request in progress -->
     &nbsp;
     <div class="spinner"></div>
   </div>
 </div>
 
 <div ng-if="req.stopped && req.success === false" ng-init="console.log(req)" class="alert alert-danger">
-  <i class="fa fa-danger"></i> Request Failed
+  <i class="fa fa-danger"></i> 请求失败    <!-- Request Failed -->
 </div>
 
 <div ng-if="spy.mode.name === 'request'">
   <label>
-    Elasticsearch request body &nbsp;
+    ES请求体 &nbsp;	<!-- Elasticsearch request body -->
   </label>
   <pre>{{req.fetchParams.body | json}}</pre>
 </div>
 
 <div ng-if="spy.mode.name === 'response'">
   <label>
-    Elasticsearch response body &nbsp;
+    ES响应体 &nbsp;	<!-- Elasticsearch request body -->
   </label>
   <pre>{{req.resp | json}}</pre>
 </div>
