--- a/src/ui/public/kbn_top_nav/kbn_top_nav.html
+++ b/src/ui/public/kbn_top_nav/kbn_top_nav.html
@@ -38,10 +38,9 @@
   </div>
 
   <!--radio box-->
-  <div class="queryType">
-    <input type="radio" name="queryType" ng-model="queryType" ng-value="comp" ng-checked="true" ng-init="queryType='comp'"/>组合条件
-    <input type="radio" name="queryType" ng-model="queryType" ng-value="DSL" />DSL语句  
-    {{queryType}}
+  <div class="kuiQueryType">
+    <input type="radio" name="queryType" ng-model="queryType" ng-value="true" ng-checked="true" ng-init="queryType='true'"/>组合条件
+    <input type="radio" name="queryType" ng-model="queryType" ng-value="false" />DSL语句  
   </div>
 
 
