--- a/src/core_plugins/kibana/public/discover/index.html
+++ b/src/core_plugins/kibana/public/discover/index.html
@@ -60,7 +60,7 @@
           <br><br>
     
           <div class="logicOper">
-              <label>条件逻辑：</label>
+              <label>条件逻辑：{{logicOper}}</label>
               <input type="radio" name="logicOper" ng-model="logicOper" value="AND" ng-checked="true" ng-init="logicOper='AND'"/>全部满足
               <input type="radio" name="logicOper" ng-model="logicOper" value="OR"/>任一满足  
               
@@ -74,7 +74,7 @@
             <a class="glyphicon glyphicon-remove"ng-show="$index!=0" style="color:red;font-size:13px" ng-click="delCond($index)"></a>
           </div>
 
-          <button class="btn btn-sm " ng-click="search()">搜索</button> 
+          <button class="btn btn-sm " type="submit">搜索</button> 
       </div>
       </form>
 
