--- a/src/core_plugins/kibana/public/management/sections/indices/_index_header.html
+++ b/src/core_plugins/kibana/public/management/sections/indices/_index_header.html
@@ -9,7 +9,7 @@
       ng-click="setDefault()"
       tooltip="Set as default index"
       class="btn btn-success">
-      <span class="sr-only">Set as default index</span>
+      <span class="sr-only">设为默认索引</span> <!-- Set as default index -->
       <i aria-hidden="true" class="fa fa-star"></i>
     </button>
     <button
@@ -18,7 +18,7 @@
       confirmation="This will reset the field popularity counters. Are you sure you want to reload your fields?"
       tooltip="Refresh field list"
       class="btn btn-warning">
-      <span class="sr-only">Reload field list</span>
+      <span class="sr-only">刷新字段列表</span> <!-- Reload field list -->
       <i aria-hidden="true" class="fa fa-refresh"></i>
     </button>
     <button
@@ -28,7 +28,7 @@
       confirmation="Are you sure you want to remove this index pattern?"
       tooltip="Remove index pattern"
       class="btn btn-danger">
-      <span class="sr-only">Remove index pattern</span>
+      <span class="sr-only">删除索引</span> <!-- Remove index pattern -->
       <i aria-hidden="true" class="fa fa-trash"></i>
     </button>
   </div>
