--- a/src/core_plugins/kibana/public/management/sections/indices/_create.html
+++ b/src/core_plugins/kibana/public/management/sections/indices/_create.html
@@ -12,13 +12,16 @@
               <input
                 ng-model="index.isTimeBased"
                 type="checkbox">
-              Index contains time-based events
+                	索引包含时间
+              <!-- Index contains time-based events-->
             </label>
             <br>
+            <!-- 
             <label ng-if="index.isTimeBased">
-              <input ng-model="index.nameIsPattern" type="checkbox">
+              <input ng-model="index.nameIsPattern" type="checkbox" >
               Use event times to create index names <small>[DEPRECATED]</small>
             </label>
+            -->
           </div>
 
           <div class="form-group" ng-if="index.isTimeBased && index.nameIsPattern">
