--- a/src/core_plugins/kibana/public/management/sections/indices/_indexed_fields.html
+++ b/src/core_plugins/kibana/public/management/sections/indices/_indexed_fields.html
@@ -4,4 +4,4 @@
   per-page="perPage">
 </paginated-table>
 
-<p class="text-center default-message" ng-if="rows.length === 0">No matching fields found.</p>
+<p class="text-center default-message" ng-if="rows.length === 0">未找到字段</p> <!-- No matching fields found. -->
