CSS change as per VOS style

--- a/src/ui/public/chrome/directives/global_nav/global_nav.html
+++ b/src/ui/public/chrome/directives/global_nav/global_nav.html
@@ -4,7 +4,7 @@
   ng-show="isVisible"
 >
 
-  <!-- Logo -->
+  <!-- Logo 
   <div class="global-nav__logo">
     <li
       ng-if="!logoBrand && !smallLogoBrand"
@@ -26,6 +26,7 @@
       class="logo-small visible-sm hidden-xs"
     ></li>
   </div>
+  -->
 
   <!-- Links -->
   <div class="global-nav__links">
@@ -36,11 +37,11 @@
       ></app-switcher>
     </div>
 
-    <!-- Bottom button -->
+    <!-- Bottom button 
     <div class="global-nav__links-section">
       <div class="chrome-actions" kbn-chrome-append-nav-controls></div>
 
-      <!-- Open/close sidebar -->
+
       <global-nav-link
         class="{{ globalNavToggleButton.classes }}"
         tooltip-content="globalNavToggleButton.tooltipContent"
@@ -49,6 +50,7 @@
         title="globalNavToggleButton.title"
       ></global-nav-link>
     </div>
+    -->
   </div>
 
 </nav>
