--- a/src/ui/public/chrome/directives/global_nav/global_nav.html
+++ b/src/ui/public/chrome/directives/global_nav/global_nav.html
@@ -4,14 +4,14 @@
   ng-show="isVisible"
 >
 
-  <!-- Logo 
-  <div class="global-nav__logo">
+  <!-- Logo -->
+  <div class="global-nav__logo" style="display: inline-block">
     <li
       ng-if="!logoBrand && !smallLogoBrand"
       aria-label="{{ appTitle }} Logo"
       class="logo kibana"
     ></li>
-
+	<!-- 
     <li
       ng-if="logoBrand"
       ng-style="{ 'background': logoBrand }"
@@ -25,8 +25,9 @@
       aria-label="{{ appTitle }} Logo"
       class="logo-small visible-sm hidden-xs"
     ></li>
+    -->
   </div>
-  -->
+
 
   <!-- Links -->
   <div class="global-nav__links">
