--- a/src/core_plugins/kibana/public/management/sections/indices/index.html
+++ b/src/core_plugins/kibana/public/management/sections/indices/index.html
@@ -5,11 +5,13 @@
         <a
           ng-if="editingId"
           href="#/management/kibana/index"
-          class="btn btn-primary btn-xs"
+          class="btn btn-primary btn-sm"
           aria-label="{{ 'KIBANA-ADD_NEW' | translate }}">
-          <span class="sr-only" translate="KIBANA-ADD_NEW"></span>
-          <i aria-hidden="true" class="fa fa-plus"></i>
-          <span class="sr-only" translate="KIBANA-ADD_NEW"></span>
+          	<span>新增日志库</span>
+          <!-- <span class="sr-only" translate="KIBANA-ADD_NEW"> 新增</span>
+          	<i aria-hidden="true" class="fa fa-plus"></i>
+          	<span class="sr-only" translate="KIBANA-ADD_NEW">新增</span> 
+          -->
         </a>
       </h5>
     </div>
@@ -18,8 +20,8 @@
         ng-if="!defaultIndex"
         class="sidebar-item">
         <div class="sidebar-item-title full-title">
-            <span class="label label-warning" translate="KIBANA-WARNING"></span>
-            <p translate="KIBANA-NO_DEFAULT_INDEX_PATTERN"></p>
+            <span class="label label-warning" translate="KIBANA-WARNING">警告</span>
+            <p translate="KIBANA-NO_DEFAULT_INDEX_PATTERN">必须先设置默认索引，操作才能继续</p>
         </div>
       </li>
       <li
