--- a/src/ui/public/kbn_top_nav/kbn_top_nav.html
+++ b/src/ui/public/kbn_top_nav/kbn_top_nav.html
@@ -27,8 +27,10 @@
           tooltip-placement="bottom"
           tooltip-popup-delay="400"
           tooltip-append-to-body="1"
-          data-test-subj="{{menuItem.testId}}"          
+          data-test-subj="{{menuItem.testId}}"  
+          ng-hide="queryType"        
         ></div>
+        
 
         <!-- Time-picker "menu item" -->
         <kbn-global-timepicker></kbn-global-timepicker>
@@ -41,6 +43,7 @@
   <div class="kuiQueryType" ng-show="appName=='discover'">
     <input type="radio" name="queryType" ng-model="queryType" ng-value="true" ng-checked="true" ng-init="queryType='true'"/>组合条件查询
     <input type="radio" name="queryType" ng-model="queryType" ng-value="false" />Lucene查询  
+    
   </div>
 
 
